notebook output removal

--- a/pcap_python_cert/PCAP-31-03-3.1-Understand-machine-representation-of-characters.ipynb
+++ b/pcap_python_cert/PCAP-31-03-3.1-Understand-machine-representation-of-characters.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "016293fb-9be9-4fcb-a517-c074fe10f411",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "65\n",
-      "A\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ASCII (American Standard Code for Information Interchange)\n",
     "# - Developed in the 60's\n",
@@ -35,22 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "53956635-9ece-499d-bdb8-f8fa1d64f9d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u0000 \u0001 \u0002 \u0003 \u0004 \u0005 \u0006 \u0007 \t \n",
-      " \u000e \u000f \u0010 \u0011 \u0012 \u0013 \u0014 \u0015 \u0016 \u0017 \u0018 \u0019 \u001a \u001b \u001c",
-      " \u001d",
-      " \u001e",
-      " \u001f   "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ASCII letter ranges\n",
     "\n",
@@ -64,43 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "6f025c7e-baf0-418c-99a0-f886b34c4b88",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"'Z'\""
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chr(90)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "6bacf18a-0619-472d-ba99-0306ae9617cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x̄\n",
-      "μ 956\n",
-      "σ 963\n",
-      "∑ 8721\n",
-      "± 177\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('x\\u0304')      # x̄\n",
     "print('μ', ord('μ'))  # μ 956\n",
@@ -163,22 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a8d4c8fb-1e8d-41b0-a3e2-8e110f50996e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "65\n",
-      "A\n",
-      "233\n",
-      "0xe9\n",
-      "128522\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ASCII example\n",
     "print(ord('A'))       # 65\n",
@@ -194,20 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4ea6d799-e712-4159-8fd7-ba03d30f6220",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "é\n",
-      "😊\n",
-      "é\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('\\u00E9')       # 'é'\n",
     "print(chr(233))       # 'é'\n",
@@ -371,9 +305,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.13 (venv_wsl)",
    "language": "python",
-   "name": "python3"
+   "name": "venv_wsl"
   },
   "language_info": {
    "codemirror_mode": {
